// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled allows for contextual overrides (background yellow) 1`] = `
<div
  className=

      {
        background: yellow;
      }
/>
`;

exports[`styled allows for contextual overrides mixed under user overrides (background yellow, color red) 1`] = `
<div
  className=

      {
        background: yellow;
        color: red;
      }
/>
`;

exports[`styled allows user overrides (background green) 1`] = `
<div
  className=

      {
        background: green;
      }
/>
`;

exports[`styled can process style props (background blue) 1`] = `
<div
  className=

      {
        background: blue;
      }
/>
`;

exports[`styled renders base styles (background red) 1`] = `
<div
  className=

      {
        background: red;
      }
/>
`;
